--- a/Cadres/app/src/main/res/layout/activity_search.xml
+++ b/Cadres/app/src/main/res/layout/activity_search.xml
@@ -7,24 +7,49 @@
     android:focusableInTouchMode="true"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <EditText
-        android:id="@+id/et_search"
-        android:layout_width="@dimen/dp_460"
-        android:layout_height="@dimen/dp_40"
+
+    <LinearLayout
+        android:id="@+id/ll_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_30"
-        android:background="@drawable/shape_ffe5ce_r40"
-        android:drawableLeft="@mipmap/ic_search"
-        android:drawablePadding="@dimen/dp_15"
-        android:hint="请输入关键字进行搜索"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:maxLength="20"
-        android:maxLines="1"
-        android:paddingStart="@dimen/dp_20"
-        android:paddingEnd="@dimen/dp_15"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/tv_screen_dwlb"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/dp_40"
+            android:layout_marginStart="@dimen/dp_20"
+            android:background="@drawable/shape_db1b21_fce8e6_r40"
+            android:drawableRight="@mipmap/ic_down"
+            android:entries="@array/zcfg_array"
+            android:gravity="center_vertical"
+            android:minWidth="@dimen/dp_140"
+            android:paddingStart="@dimen/dp_20"
+            android:paddingEnd="@dimen/dp_15"
+            android:text="全部" />
+
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="@dimen/dp_400"
+            android:layout_height="@dimen/dp_40"
+            android:background="@drawable/shape_db1b21_fce8e6_r40"
+            android:drawableLeft="@mipmap/ic_search"
+            android:drawablePadding="@dimen/dp_15"
+            android:layout_marginStart="@dimen/sp_30"
+            android:hint="请输入关键字进行搜索"
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:maxLength="20"
+            android:maxLines="1"
+            android:paddingStart="@dimen/dp_20"
+            android:paddingEnd="@dimen/dp_15" />
+
+    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
@@ -35,7 +60,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_search">
+        app:layout_constraintTop_toBottomOf="@+id/ll_search">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
